--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Holo~</h1>
 
 <ul>
+
 <% @events.each do |e| %>
 	<li>
 		<%= e.name %>
@@ -19,5 +20,7 @@
 
 
 <%= link_to 'New Event', new_event_path %>
+
+<%= paginate @events %>
 
 
