--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,6 +8,25 @@
 
 
 <div class="form-group">
+	<%= f.label :category_id, "Category" %>
+	<%#= f.select :category_id, Category.all.map{ |x| [ x.name, x.id]}, :class => "form-control"%>
+
+	<%#= f.collection_select :category_id, Category.all, :id, :name, :class => "form-control", :prompt => "please selsect" %>
+
+
+	<% Category.all.each do |c| %>
+		<%= f.radio_button :category_id, c.id%> <%= c.name%>
+
+	<% end %>
+
+
+
+
+</div>
+
+
+
+<div class="form-group">
 	<%= f.label :name, "Name" %>
 	<%= f.text_field :name, :class => "form-control"%>
 </div>
