--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,7 @@
 <%= @event.name %>
+
+<p>category_name: <%= @event.category_name %></p>
+
 <%= simple_format @event.description %>
 
 <p><%= link_to "back to index", events_path %></p>
