--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,10 +19,13 @@
 
 	<% end %>
 
-
-
-
 </div>
+
+<div class="form-group">
+	<%= f.collection_check_boxes(:group_ids, Group.all, :id, :name) %>
+</div>
+
+
 
 
 
