--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -8,6 +8,14 @@
 
 
 <div class="form-group">
+	<%= f.label :status, "Status" %>
+	<%= f.select :status,[["Published","published"],["Draft","draft"]]%>
+
+
+</div>
+
+
+<div class="form-group">
 	<%= f.label :category_id, "Category" %>
 	<%#= f.select :category_id, Category.all.map{ |x| [ x.name, x.id]}, :class => "form-control"%>
 
@@ -22,6 +30,7 @@
 </div>
 
 <div class="form-group">
+	<%#多選的核選方塊%>
 	<%= f.collection_check_boxes(:group_ids, Group.all, :id, :name) %>
 </div>
 
