--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,30 @@
 <h1>Holo~</h1>
 
+<p>
+	<%= link_to "Latest", latest_events_path%>
+
+</p>
+
+
+<%=form_tag bulk_update_events_path do %> <form>
+
+<ul>
+	<li><%= link_to 'Sort by Name', events_path( :order => "name") %></li>
+	<li><%= link_to 'Sort by Default', events_path %></li>
+	
+	
+</ul>
 <table class="table">
 <% @events.each do |e| %>
 	<tr>
 		<td>
+		<%= check_box_tag "ids[]", e.id, false%>
 		<%= e.name %>
 		</td>
 		<td>
 		<%= link_to " Attendees", event_attendees_path(e),  :class => "btn btn-primary"  %>
+
+		<%= link_to 'Dashboard', dashboard_event_path(e), :class => "btn btn-primary"   %>
 
 		<%= link_to " (XML)", event_path(e, :format => :xml), :class => "btn btn-default" %>
     	<%= link_to " (JSON)", event_path(e, :format => :json), :class => "btn btn-default" %>
@@ -24,10 +41,23 @@
 
 </table>
 
+	<%= submit_tag "Delete"%>
+	<%= submit_tag "Publish"%>
+
+
+<% end %>
+
 
 
 <%= link_to 'New Event', new_event_path %>
 
+
 <%= paginate @events %>
 
+<hr>
+<%= form_tag events_path, :method => :get do %>
+  <%= text_field_tag "keyword" %>
+  <%= submit_tag "Search" %>
+<% end %>
 
+<%#=button_to "Delete All", bulk_delete_events_path, :method => :post %>
