--- a/app/views/event_attendees/index.html.erb
+++ b/app/views/event_attendees/index.html.erb
@@ -1,13 +1,15 @@
-<h2><%= @event.name%> is an show </h2>
+<h2>Event.name: <%= @event.name%>  </h2>
 
 <h2>Attendee-list  </h2>
 
-<ul>
+<table class="table">	
 <% @attendees.each do |a|%>
-
-	<li>
+	<tr>
+		<td>
 		<%= a.name %>
+		</td>
 
+		<td>
 		<%= link_to "Show", event_attendee_path(@event, a), :class => "btn btn-primary"%>
 
 		
@@ -16,12 +18,15 @@
 
 		<%= link_to "Delete", event_attendee_path(@event, a), :method =>"delete", :data => { :confirm => "Sure?"}, :class => "btn btn-danger"%>
 
-
-	</li>
+		</td>
+	</tr>
 
 
 <% end %>
-</ul>
+</table>
 
 
 <%= link_to "New Attendee", new_event_attendee_path(@event), :class => "btn btn-primary" %>
+
+<hr>
+<%= link_to "Back to Events index", events_path %>
