--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,10 @@
 
 			<%= yield %> <%# yield就是會被替換成樣板的地方 %>  
 			<hr>
-			<%= link_to "ADMIN", admin_events_path %>
+
+			<%if current_user && current_user.admin?%>
+				<%= link_to "ADMIN", admin_events_path %>
+			<% end %>
 
 		</div>
 	</div>
